# audio2tonie

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: release.yml
.github/workflows/: ci.yml  release.yml
resources/test/: test_1.taf
src/: cli.rs  convert.rs  converter.py  converter.rs  extract.rs  main.rs  mod.rs  ogg_page.rs  opus_packet.rs  opus_page.rs  utils.rs
src/tests/: mod.rs  test_convert.rs  test_converter.rs  test_extract.rs  test_ogg_page.rs  test_opus_page.rs  test_toniefile.rs  test_utils.rs
src/tests/test_files/: license.md
