[package]
name = "audio2tonie"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
protobuf = "3.4"
byteorder = "1.5"
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.10"
sha1 = "0.10"
chrono = "0.4"
walkdir = "2.5"
lazy_static = "1.5"

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"

[build-dependencies]
protobuf-codegen = "3.7"

[package.metadata.protoc]
include_dirs = ["src/tonie_header"]

